--- a/src/styles/components/About.scss
+++ b/src/styles/components/About.scss
@@ -3,10 +3,11 @@
   max-width: 800px;
   margin: 0 auto;
 
-  &-image{
-    img{
-        border-radius: 50px;
-        width: 200px;
+  &-image {
+    img {
+      border-radius: 50px;
+      width: 200px;
+      transition: all .3s;
     }
   }
 
@@ -39,17 +40,21 @@
   }
 
   .image {
-    width: 100%;
+    cursor: pointer;
     margin: 3px;
-    height: 300px;
-  }
-  .images-container {
-    display: flex;
   }
 
   .image img {
-    height: 100%;
-    width: 100%;
+    height: 300px;
+    width: 250px;
     object-fit: cover;
+    transition: all .5s;
   }
+
+  .image img:hover {
+    width: 280px;
+    height: 320px;
+
+  }
+
 }
