--- a/client/src/styles/basics/_base.scss
+++ b/client/src/styles/basics/_base.scss
@@ -34,7 +34,7 @@
 }
 
 html {
-  font-family: montserratRegular, sans-serif;
+  font-family: "sans-serif";
   line-height: 1.6;
   direction: rtl;
 }
@@ -62,13 +62,13 @@ h6 {
 h1 {
   font-size: 2.2rem;
   color: white;
-  font-family: montserratBold, "sans-sarif";
+  font-family: "sans-sarif";
 }
 
 h2,
 h3,
 h4 {
-  font-family: montserratRegular, "sans-sarif";
+  font-family: "sans-sarif";
 }
 
 h2 {
@@ -84,20 +84,20 @@ p {
   color: black;
   font-size: 18px;
   margin: 0;
-  font-family: montserratLight, "sans-sarif";
+  font-family: "sans-sarif";
 }
 
 small {
   margin: 0;
   font-size: 12px;
-  font-family: montserratExtraLight, "sans-sarif";
+  font-family: "sans-sarif";
 }
 
 button {
   cursor: pointer;
   border: none;
   border-radius: 4px;
-  font-family: montserratRegular, "sans-sarif";
+  font-family: "sans-sarif";
 }
 
 textarea,
@@ -110,7 +110,7 @@ input {
   border-radius: 4px;
   border: 1px solid #02a2ff;
   font-size: 18px;
-  font-family: montserratLight, "sans-sarif";
+  font-family: "sans-sarif";
   transition: 0.2s;
 
   &:focus {
@@ -147,7 +147,7 @@ select option:hover {
 label {
   color: black;
   cursor: pointer;
-  font-family: montserratBold, "sans-sarif";
+  font-family: "sans-sarif";
 }
 
 a {
