--- a/client/src/styles/components/NotesSection.scss
+++ b/client/src/styles/components/NotesSection.scss
@@ -15,7 +15,7 @@
     margin-top: 50px;
     padding-bottom: 50px;
     .note-container {
-      width: 30%;
+      width: 300px;
       margin: 10px;
       padding: 15px;
       border-radius: 8px;
