--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -12,6 +12,8 @@
 @import "components/About.scss";
 @import "components/Navigator.scss";
 @import "components/NotesSection.scss";
+@import "components/Login.scss";
+
 
 //views
 @import "views/Home.scss";
