--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -13,6 +13,7 @@
 @import "components/Navigator.scss";
 @import "components/NotesSection.scss";
 @import "components/Login.scss";
+@import "components/ApproveLettersModal.scss";
 
 
 //views
