--- a/client/src/styles/components/Login.scss
+++ b/client/src/styles/components/Login.scss
@@ -1,13 +1,17 @@
 .login-btn {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 0px;
+    right: 0px;
     background: rgba(235, 114, 0, 0.2);
-    padding: 4px 10px;
+    padding: 8px 10px;
     border-radius: 3px;
     color: white;
     font-weight: bold;
     letter-spacing: 1px;
+    h3{
+        color: white;
+        font-weight: bold;
+    }
 }
 
 .login-drawer {
