--- a/client/src/styles/components/NotesSection.scss
+++ b/client/src/styles/components/NotesSection.scss
@@ -8,6 +8,8 @@
   flex-direction: column;
 
   h2 {
+    color: white;
+    font-weight: bold;
     margin-bottom: 10px;
   }
 
@@ -38,7 +40,27 @@
         color: #666; /* Medium gray text color */
         font-size: 14px;
         line-height: 1.4;
+        text-decoration: underline;
       }
+    }
+  }
+
+  .danger-btn {
+    position: absolute;
+    top: 0px;
+    right: 60px;
+    h3,
+    span {
+      color: white;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+
+    &.delete {
+      top: 3px;
+      left: 3px;
+      right: auto;
+      padding: 4px 8px;
     }
   }
 }
