--- a/client/src/styles/components/NotesSection.scss
+++ b/client/src/styles/components/NotesSection.scss
@@ -8,6 +8,10 @@
   display: flex;
   flex-direction: column;
 
+  @media (max-width: 500px) {
+    width: 100%;
+  }
+
   h2 {
     color: white;
     font-weight: bold;
