--- a/client/src/styles/components/NotesSection.scss
+++ b/client/src/styles/components/NotesSection.scss
@@ -2,6 +2,7 @@
   min-width: 400px;
   max-width: 800px;
   margin: 0 auto;
+  margin-bottom: 50px;
   background-color: rgba(255, 255, 255, 0.2);
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -9,7 +10,7 @@
   flex-direction: column;
 
   @media (max-width: 500px) {
-    width: 90%;
+    width: 80%;
   }
 
   h2 {
