--- a/client/src/styles/components/About.scss
+++ b/client/src/styles/components/About.scss
@@ -38,6 +38,7 @@
       line-height: 1.4;
     }
     @media (max-width: 500px) {
+      margin: 5px;
       text-align: center;
     }
   }
@@ -62,7 +63,7 @@
     width: 280px;
     height: 320px;
     @media (max-width: 500px) {
-      width: 100vw;
+      width: 95vw;
       height: 300px;
     }
   }
