--- a/client/src/styles/basics/_helpers.scss
+++ b/client/src/styles/basics/_helpers.scss
@@ -3,13 +3,17 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .darker-screen{
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .loading_screen {
