--- a/client/src/styles/components/About.scss
+++ b/client/src/styles/components/About.scss
@@ -3,6 +3,12 @@
   max-width: 800px;
   margin: 0 auto;
 
+  .image-modal {
+    height: 80%;
+    width: 100%;
+    object-fit: contain;
+  }
+
   &-image {
     img {
       border-radius: 50px;
@@ -19,7 +25,7 @@
   }
 
   .description {
-    margin-left: 10px;
+    padding: 20px;
 
     h2 {
       color: rgb(233, 233, 233);
@@ -36,16 +42,17 @@
       font-size: 24px;
       font-weight: bold;
       line-height: 1.4;
+    
     }
+
     @media (max-width: 500px) {
-      margin: 5px;
       text-align: center;
+
     }
   }
 
   .image {
     cursor: pointer;
-    margin: 3px;
   }
 
   .image img {
@@ -56,12 +63,14 @@
 
     @media (max-width: 500px) {
       width: 100vw;
+      margin: 0px;
     }
   }
 
   .image img:hover {
     width: 280px;
     height: 320px;
+
     @media (max-width: 500px) {
       width: 95vw;
       height: 300px;
