--- a/client/src/styles/components/NotesSection.scss
+++ b/client/src/styles/components/NotesSection.scss
@@ -11,7 +11,7 @@
 
   @media (max-width: 500px) {
     min-width: auto;
-    width: 80%;
+    width: 90%;
   }
 
   h2 {
@@ -48,6 +48,9 @@
         font-size: 14px;
         line-height: 1.4;
         text-decoration: underline;
+        max-height: 200px;
+        overflow-y: auto;
+        padding: 0px 5px;
       }
     }
   }
