--- a/client/src/styles/basics/_base.scss
+++ b/client/src/styles/basics/_base.scss
@@ -1,4 +1,5 @@
 @import "./typography.scss";
+$quantity: 50;
 
 :root {
   width: 100vw;
@@ -46,6 +47,39 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-blend-mode: darken;
+
+  .firefly {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    width: 0.8vw;
+    height: 0.8vw;
+    margin: -0.2vw 0 0 9.8vw;
+    animation: ease 300s alternate infinite;
+    pointer-events: none;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      transform-origin: -10vw;
+    }
+
+    &::before {
+      opacity: 0;
+      animation: drift ease alternate infinite;
+    }
+
+    &::after {
+      background: white;
+      opacity: 0;
+      box-shadow: 0 0 0vw 0vw yellow;
+      animation: drift ease alternate infinite, flash ease infinite;
+    }
+  }
 }
 
 h1,
@@ -121,7 +155,6 @@ input {
 }
 
 select {
-  /* Reset all default styles */
   appearance: none;
   background: none;
   border: none;
@@ -134,14 +167,12 @@ select {
 }
 
 select:hover {
-  background-color: transparent; /* Set the background to transparent on hover */
-  outline: none; /* Remove the outline on hover (focus) */
-  /* Add any other styles you want for the hover state */
+  background-color: transparent;
+  outline: none;
 }
 
 select option:hover {
   background-color: transparent;
-  /* Add any other styles you want for the hover state of options */
 }
 
 label {
@@ -163,4 +194,54 @@ ul {
 
 li {
   margin-bottom: 5px;
+}
+
+@for $i from 1 through $quantity {
+  $steps: random(12) + 16;
+  $rotationSpeed: random(10) + 8s;
+
+  .firefly:nth-child(#{$i}) {
+    animation-name: move#{$i};
+
+    &::before {
+      animation-duration: #{$rotationSpeed};
+    }
+
+    &::after {
+      animation-duration: #{$rotationSpeed}, random(6000) + 5000ms;
+      animation-delay: 0ms, random(8000) + 500ms;
+    }
+  }
+
+  @keyframes move#{$i} {
+    @for $step from 0 through $steps {
+      #{$step * (100 / $steps)}#{"%"} {
+        transform: translateX(random(100) - 50vw)
+          translateY(random(100) - 50vh)
+          scale(random(75) / 100 + 0.25);
+      }
+    }
+  }
+}
+
+@keyframes drift {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes flash {
+  0%,
+  30%,
+  100% {
+    opacity: 0;
+    box-shadow: 0 0 0vw 0vw yellow;
+  }
+  5% {
+    opacity: 1;
+    box-shadow: 0 0 2vw 0.4vw yellow;
+  }
 }
