--- a/client/src/styles/components/NotesSection.scss
+++ b/client/src/styles/components/NotesSection.scss
@@ -24,6 +24,7 @@
     margin-top: 50px;
     padding-bottom: 50px;
     .note-container {
+      height: fit-content;
       width: 300px;
       margin: 10px;
       padding: 15px;
