--- a/client/src/styles/basics/_base.scss
+++ b/client/src/styles/basics/_base.scss
@@ -52,8 +52,8 @@ body {
     position: fixed;
     left: 50%;
     top: 50%;
-    width: 0.8vw;
-    height: 0.8vw;
+    width: 5px;
+    height: 5px;
     margin: -0.2vw 0 0 9.8vw;
     animation: ease 300s alternate infinite;
     pointer-events: none;
