--- a/client/src/styles/basics/_base.scss
+++ b/client/src/styles/basics/_base.scss
@@ -57,6 +57,7 @@ body {
     margin: -0.2vw 0 0 9.8vw;
     animation: ease 300s alternate infinite;
     pointer-events: none;
+    z-index: -1;
 
     &::before,
     &::after {
