--- a/client/src/styles/components/About.scss
+++ b/client/src/styles/components/About.scss
@@ -21,7 +21,8 @@
     padding: 40px;
     border-radius: 10px;
     width: 100%;
-    height: 100%;
+    height: 650px;
+    object-fit: cover;
   }
 
   .description {
@@ -51,11 +52,16 @@
     }
   }
 
+  .images-container{
+    gap: 4px;
+  }
+
   .image {
     cursor: pointer;
   }
 
   .image img {
+    border-radius: 5px;
     height: 300px;
     width: 250px;
     object-fit: cover;
